src/test/ui/error-codes/E0137.rs
#![feature(main)]

#[main]
fn foo() {}

#[main]
fn f() {}
//~^ ERROR E0137
